re implement the blockchain (PoS)
